testdata/zkc/invalid/while_invalid_01.zkc
;;error:4:11-12:unknown comparator
function f(u8 x) -> (u8 r) {
  r = 0
  while x = 0 {
    r = 1
  }
  return
}
